--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ node_js:
   - "5"
 
 before_script:
-  - psql -c 'CREATE USER crudtest WITH PASSWORD crudtest;'
-  - psql -c 'CREATE DATABASE crudtest WITH OWNER crudtest;'
+  - psql postgres -c 'CREATE USER crudtest WITH PASSWORD crudtest;'
+  - psql postgres -c 'CREATE DATABASE crudtest WITH OWNER crudtest;'
 
 notifications:
   slack: devops-training-spb:H1eeLPE4mcpnrFgBfZTBtSPT
