--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
   - "5"
 
 before_script:
-  - psql postgres -c 'CREATE USER crudtest WITH PASSWORD crudtest;'
+  - psql postgres -c 'CREATE USER crudtest WITH PASSWORD 'crudtest';'
   - psql postgres -c 'CREATE DATABASE crudtest WITH OWNER crudtest;'
 
 notifications:
